<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:background="#bdbdbd"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivCement"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="#A12828"
            android:clickable="true"
            app:srcCompat="@drawable/cement"
            android:focusable="true" />

        <ImageView
            android:id="@+id/ivSteel"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="#a1887f"
            android:clickable="true"
            app:srcCompat="@drawable/ic_beam"
            android:focusable="true" />

        <ImageView
            android:id="@+id/ivReport"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/report" />

        <LinearLayout
            android:id="@+id/call1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ctv8mm"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="right"
                android:text="@string/mm8"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cwt8"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:hint="@string/Weight"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:paddingStart="30dp"
                android:paddingLeft="30dp"
                android:paddingEnd="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/call2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctv10mm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:text="@string/mm10"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cwt10"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:gravity="fill_horizontal"
                    android:hint="@string/enter_weight"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/call3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctv12mm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:text="@string/mm12"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cwt12"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:gravity="fill_horizontal"
                    android:hint="@string/enter_weight"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/call4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctv16mm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:text="@string/mm16"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cwt16"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:gravity="fill_horizontal"
                    android:hint="@string/enter_weight"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/call5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctv20mm"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:text="@string/mm20"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/cwt20"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:ems="10"
                    android:gravity="fill_horizontal"
                    android:hint="@string/enter_weight"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:paddingStart="30dp"
                    android:paddingLeft="30dp"
                    android:paddingEnd="20dp"
                    android:paddingRight="20dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLoad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="80dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="80dp"
                    android:layout_marginRight="80dp"
                    android:layout_weight="1"
                    android:text="Load Weights"
                    android:textColor="#151515"
                    android:textStyle="bold"
                    app:backgroundTint="#837575" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivCal"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_calculations" />

            <TextView
                android:id="@+id/tvCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:layout_marginLeft="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:text="@string/calculate"
                android:textColor="#131313"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/you_result_will_be_here"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>